qt-codes-advantech/WRY-Fixed-Errors/Fix_Counter_BufferedUpDownCounter-errors.txt
// FILE: Fix_Counter_BufferedUpDownCounter-errors.txt
// DATE: Fri 05 May 2023 08:03:11 AM +08
// USING QT5 in QtCreator

COUNTER_CONTINUECOMPARE FOR PCIE-1884 ADVANTECH CARD

=====================================================================
// ERROR NO 01
// INSIDE configuredialog.h  LINE 5
#include <bdaqctrl.h>
// #include "../../../inc/bdaqctrl.h"

// ERROR NO 02
// INSIDE bufferenupdowncounter.h LINE 15
// BufferedUpdownCounter(QWidget *parent = 0, Qt::WindowFlags flags = 0);
   BufferedUpdownCounter(QWidget *parent = 0, Qt::WindowFlags flags = Qt::WindowFlags());
     
// ERROR NO 03
// INSIDE configuredialog.cpp LINE 87

        str.asprintf("Error:the error code is 0x%x\nThe %s is busy or not exit in computer now.\nSelect other device please!", errorCode, des.toUtf8().data());
                                     
// ERROR NO 04
/home/wruslan/WRY-pcie1884-qt5/Qt/DI_DIInterrupt/configuredialog.cpp:140: error: invalid conversion from ‘int’ to ‘Qt::WindowType’ [-fpermissive]
../DI_DIInterrupt/configuredialog.cpp: In member function ‘void ConfigureDialog::DeviceChanged(int)’:
../DI_DIInterrupt/configuredialog.cpp:140:43: error: invalid conversion from ‘int’ to ‘Qt::WindowType’ [-fpermissive]
  140 |         m_portPanel[i] = new DioPortUI(0, 0, portIndexes[i], ports[portIndexes[i]], images);
      |                                           ^
      |                                           |
      |                                           int
// SOLUTION FOR ERROR NO 04
// ERROR NO 4
     // m_portPanel[i] = new DioPortUI(0, 0, portIndexes[i], ports[portIndexes[i]], images);
        m_portPanel[i] = new DioPortUI(0, Qt::WindowFlags(), portIndexes[i], ports[portIndexes[i]], images);


// ERROR NO 05 // SOLUTION
// INSIDE updowncounter.cpp JUST ADD HEADER BELOW

#include <QButtonGroup>

// ERROR 06
// INSIDE simplegraph.h LINE 12

#include <bdaqctrl.h>
// #include "../../../inc/bdaqctrl.h"

// ERROR 07
// INSIDE simplegraph.cpp LINES 328, 348, 367
// REPLACE sprintf WITH asprintf 


	rangeStrs[0].asprintf("%g", rangeMax);
	rangeStrs[0] += spted_unit[tm_unit_idx];
	rangeStrs[1].asprintf("%g", rangeMin);
	rangeStrs[1] += spted_unit[tm_unit_idx];


REFERENCES:   
===================================================   
https://doc.qt.io/qt-6/qvboxlayout.html      
https://doc.qt.io/qt-5/qbuttongroup.html
https://doc.qt.io/qt-6/qbuttongroup.html#details

=====================================================================
SUCCESS COMPILATION


REPEAT COMPILATION

08:14:54: Running steps for project Counter_BufferedUpDownCounter...
08:14:54: Configuration unchanged, skipping qmake step.
08:14:54: Starting: "/usr/bin/make" -j8
/usr/bin/make -f Makefile.Debug
make[1]: Entering directory '/home/wruslan/WRY-pcie1884-qt5/Qt/build-Counter_BufferedUpDownCounter-Desktop-Debug'
g++ -c -pipe -g -std=gnu++1z -Wall -Wextra -D_REENTRANT -fPIC -DQT_QML_DEBUG -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_CORE_LIB -I../Counter_BufferedUpDownCounter -I. -I../../../inc/bdaqctrl.h -I/opt/Qt/6.3.1/gcc_64/include -I/opt/Qt/6.3.1/gcc_64/include/QtWidgets -I/opt/Qt/6.3.1/gcc_64/include/QtGui -I/opt/Qt/6.3.1/gcc_64/include/QtCore -I../Counter_BufferedUpDownCounter/debug/moc -I../Counter_BufferedUpDownCounter/debug/ui -I/opt/Qt/6.3.1/gcc_64/mkspecs/linux-g++ -o ../Counter_BufferedUpDownCounter/debug/configuredialog.o ../Counter_BufferedUpDownCounter/configuredialog.cpp
g++ -Wl,-rpath,/opt/Qt/6.3.1/gcc_64/lib -Wl,-rpath-link,/opt/Qt/6.3.1/gcc_64/lib -o ../bin/debug/Counter_BufferedUpDownCounter  ../Counter_BufferedUpDownCounter/debug/configuredialog.o ../Counter_BufferedUpDownCounter/debug/main.o ../Counter_BufferedUpDownCounter/debug/bufferedupdowncounter.o ../Counter_BufferedUpDownCounter/debug/qrc_bufferedupdowncounter.o ../Counter_BufferedUpDownCounter/debug/moc_configuredialog.o ../Counter_BufferedUpDownCounter/debug/moc_bufferedupdowncounter.o   -lbiodaq /opt/Qt/6.3.1/gcc_64/lib/libQt6Widgets.so /opt/Qt/6.3.1/gcc_64/lib/libQt6Gui.so /opt/Qt/6.3.1/gcc_64/lib/libQt6Core.so -lpthread -lGL   
make[1]: Leaving directory '/home/wruslan/WRY-pcie1884-qt5/Qt/build-Counter_BufferedUpDownCounter-Desktop-Debug'
08:15:02: The process "/usr/bin/make" exited normally.
08:15:02: Elapsed time: 00:08.



EXECUTION ON THE NOTEBOOK (NO DEVICE HAHAHA)

08:15:02: Starting /home/wruslan/WRY-pcie1884-qt5/Qt/Counter_BufferedUpDownCounter/../bin/debug/Counter_BufferedUpDownCounter...
08:15:23: /home/wruslan/WRY-pcie1884-qt5/Qt/Counter_BufferedUpDownCounter/../bin/debug/Counter_BufferedUpDownCounter crashed.

08:16:04: Starting /home/wruslan/WRY-pcie1884-qt5/Qt/Counter_BufferedUpDownCounter/../bin/debug/Counter_BufferedUpDownCounter...
08:16:10: /home/wruslan/WRY-pcie1884-qt5/Qt/Counter_BufferedUpDownCounter/../bin/debug/Counter_BufferedUpDownCounter crashed.


=====================================================================
ALHAMDULILLAH 3 TIMES.
=====================================================================
